# BrakeWave

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
incl/: BrakeForceController.h  PIDController.h  SlipRatioCalculator.h  WheelSpeedSensor.h
myenv/: pyvenv.cfg
scripts/: abs_simulation.py
src/: BrakeForceController.cpp  PIDController.cpp  SlipRatioCalculator.cpp  WheelSpeedSensor.cpp  main.cpp
